@@ -1,3 +1,9 @@
+2007-05-14  Ross Burton  <ross@burtonini.com>
+
+	* libjuicer/sj-metadata-cdtext.c:
+	* libjuicer/sj-metadata-musicbrainz.c:
+	Use G_DEFINE_TYPE_WITH_CODE.
+
 2007-05-13  Ross Burton  <ross@burtonini.com>
 
 	* libjuicer/sj-metadata-cdtext.c:
